--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,15 @@ html {
   place-content: center;
 }
 
-#board {
+#board-border {
   display: grid;
-  grid-template: repeat(50, 1fr) / repeat(50, 1fr);
+  grid-template: 10px auto 10px / 10px auto 10px;
+}
+
+#board {
+  grid-column: 2;
+  grid-row: 2;
+  display: grid;
   width: 500px;
   height: 500px;
 }
@@ -14,6 +20,14 @@ html {
   background-color: lightgreen;
 }
 
+.fruit {
+  background-color: darkgreen;
+}
+
 .snake {
   background-color: red;
+}
+
+.snake-head {
+  background-color: darkred;
 }
